CMAKE_MINIMUM_REQUIRED( VERSION 3.0 ) 
PROJECT( hnode2-label-printer ) 

SET( MAJOR_VERSION 1 )
SET( MINOR_VERSION 0 )
SET( PATCH_VERSION 0 )
SET( RELEASE_VERSION 0 )

SET( DAEMON_NAME hnd-label-printer )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake) 

# Default the install prefix to just /usr
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )

ADD_DEFINITIONS( -DVERSION=${VERSION} )

SET( HN_LABEL_PRINTER_SRC
     ${CMAKE_SOURCE_DIR}/src/daemon/hnd-label-printer.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLabelPrinterDevice.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPAction.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPPrinterManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPLabelSpecManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPLabelLayoutManager.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPLabelRequest.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNLPLabelRender.cpp
)

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE( Poco REQUIRED Util Foundation Net NetSSL JSON )
FIND_PACKAGE( HNode2 REQUIRED )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include )
INCLUDE_DIRECTORIES( "/usr/include/cairo" "/usr/include/glib-2.0" "/usr/lib/aarch64-linux-gnu/glib-2.0/include" "/usr/include/pixman-1" "/usr/include/freetype2" "/usr/include/libpng16" "/usr/include/pango-1.0" "/usr/include/harfbuzz" "/usr/include/libmount" "/usr/include/blkid" "/usr/include/fribidi" )

ADD_EXECUTABLE( ${DAEMON_NAME} ${HN_LABEL_PRINTER_SRC} )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE
    ${Poco_Util_LIBRARY}
    ${Poco_Foundation_LIBRARY}
    ${Poco_Net_LIBRARY}
    ${Poco_NetSSL_LIBRARY}
    ${Poco_JSON_LIBRARY}
)
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE HNode2::common )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE cups )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE pangocairo-1.0 )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE pango-1.0 )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE gobject-2.0 )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE glib-2.0 )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE harfbuzz )
TARGET_LINK_LIBRARIES( ${DAEMON_NAME} PRIVATE cairo )


INSTALL( TARGETS ${DAEMON_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin COMPONENT daemon )

INSTALL( DIRECTORY ${CMAKE_SOURCE_DIR}/src/definitions/ DESTINATION /etc/hnode2/hnode2-label-printer-device/definitions.d COMPONENT daemon )

SET( CPACK_GENERATOR "DEB" )

SET( CPACK_DEB_COMPONENT_INSTALL 1 )
SET( CPACK_COMPONENTS_ALL daemon )

SET( CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_PATCH ${PATCH_VERSION} )

SET( CPACK_PACKAGE_DESCRIPTION "A HNode2 device for surfacing a connected label printer." )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "The hnode2 label printer device" )
SET( CPACK_PACKAGE_CONTACT "Curtis Nottberg" )
SET( CPACK_PACKAGE_ARCHITECTURE DEB-DEFAULT )

SET( CPACK_DEBIAN_PACKAGE_PRIORITY "optional" )
SET( CPACK_DEBIAN_PACKAGE_SECTION "Daemon" )
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
SET( CPACK_DEBIAN_PACKAGE_VERSION ${DEBVERSION} )
SET( CPACK_DEBIAN_FILE_NAME DEB-DEFAULT )

INCLUDE(CPack)

